Fix SonarLint issues (#89)